# mm-course-expr

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
expr1/: 1.md  2d-pca.ipynb  expr1.md  pca.ipynb
expr2/: 2.md  expr2.md  handwritten.ipynb
expr3/: 3.md  expr3.md  prompts.md  prompts.txt  要求.txt
expr3/manbo/: clip.ps1
